# pp-crawler

./: .gitignore  example.config.json  pyproject.toml
pipelines/: analytics.py  markets.py
src/pp_crawler/: main.py
src/pp_crawler/core/: config.py  exceptions.py  functions.py  link_matcher.py  pool.py
src/pp_crawler/crawler/: item.py  product.py  website.py
src/pp_crawler/crawler/engines/: engine.py  google.py
src/pp_crawler/crawler/modules/: downloader.py  module.py  policies.py  urls.py  websites.py
src/pp_crawler/crawler/plugins/: amazon.py  base_analytics.py  base_market.py  mail.py  plugin.py  rambler.py  walmart.py
src/pp_crawler/crawler/web/: driver.py  proxy.py
src/pp_crawler/pipelines/: analytics.py  markets.py
